--- a/index.html
+++ b/index.html
@@ -76,15 +76,14 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
+const firebaseConfig = {
+      apiKey: "AIzaSyDmzrcLL8U-YDGMnLL3K3edQV5uo7bszdk",
+      authDomain: "ficha-rpg-a35d5.firebaseapp.com",
+      projectId: "ficha-rpg-a35d5",
+      storageBucket: "ficha-rpg-a35d5.appspot.com",
+      messagingSenderId: "168427117838",
+      appId: "1:168427117838:web:568c9bbd43884308e9cb5f"
     };
-
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
